# SyncFilesProject

./: .coveragerc  .gitignore  README.md  filestructure_functions.py  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  sync_directories_file.json  sync_directories_file.txt  sync_files_functions.py  sync_fsm.py  sync_gui.py  temp_last_sync_file.json  test.py  tox.ini
.github/workflows/: tests.yml
gui/: __init__.py
src/syncfiles/: __init__.py  config_manager.py  entry.py  file_structure.py  file_system_interface.py  filestructure_functions.py  main.py  state_machine.py  sync_exception.py  sync_fsm.py  sync_gui.py  sync_manager.py  sync_state_machine.py  sync_states.py  sync_ui.py  wx_gui.py
src/syncfiles/file_ops/: __init__.py  filestructure_functions.py
src/syncfiles/gui/: __init__.py  sync_gui.py
src/syncfiles/state_machine/: __init__.py  sync_fsm.py
state_machine/: sync_fsm.py
tests/: __init__.py  conftest.py  mock_ui.py  test.py  test_config_manager.py  test_file_structure.py  test_file_system_interface.py  test_main.py  test_sync_exception.py  test_sync_manager.py  test_sync_state_machine.py  test_sync_states.py  test_wx_gui.py  tfuncs.py  unittest_main.py
