[metadata]
name = syncfiles
description = synchronizes two directories on the same drive
author = Kevin Hodge
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python 3.6
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9

[options]
packages = 
    syncfiles
install_requires = 
    wxPython>=4
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no