[metadata]
name = syncfiles
description = synchronizes two directories on the same drive
author = Kevin Hodge
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python 3.6
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Programming Language :: Python 3.9

[options]
packages = 
    syncfiles
install_requires = 
    wxPython>=4.1.1
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pynput>=1.7
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    attrdict>=2.0.1
    coverage>=6.4.3

[options.package_data]
syncfiles = py.typed

[flake8]
max-line-length = 120